webassembly/styles.css
body, html {
    padding:0;
    margin:0;
    height: 100%;
    overflow: hidden;
}

textarea, select, input, button, canvas { outline: none; }

body {
    background: #333;
    color: #ccc;
    font-family: 'ArialMT', 'Arial', sans-serif;
}

.container {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    flex-wrap: nowrap;
    height: 100%;
}
#editor {
    flex-grow: 100;
    padding:30px;
    padding-right:15px;
}

.editor-layout {
    width:100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-wrap: nowrap;
}

.editor-top h1 {
    float:left;
    margin-top:0;

}

.editor-top h1 a {
    color: rgba(40, 116, 180,0.6);
    text-decoration: none;
    font-size: 14px;
}

.editor-top h1 a:hover {
    color: rgba(40, 116, 180,1);
}
.editor-top button {
    float:right;
    margin-left:15px;
    background: rgb(40, 116, 180);
    color: #fff;
    border:0;
    padding: 8px 10px;
}

.editor-middle {
    flex-grow: 100;
}


.code-container {

}
#code {
    height: 100%;
    width: 100%;
    padding: 0;
    margin: 0;
    border: 0;
    background: #222;
    color: #999;
    resize: none;
    font-size: 16px;
    opacity: 0.8;
}

#code:focus {
    box-shadow: 0px 0px 5px 0px rgba(40, 116, 180,0.6);
    opacity: 1;
}


#emulator {
    padding:30px;
    padding-left:15px;
}
.emu-layout {
    width:100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-wrap: nowrap;
}


.emu-container {
    width: 640px;
    height: 480px;
    background: #000;
    text-align: center;
}


#canvas {
    opacity: 0.8;
    min-width: 640px;
    min-height: 480px;
}
#canvas:focus {
    box-shadow: 0px 0px 5px 0px rgba(40, 116, 180,0.6);
    opacity: 1;
}

.close-fullscreen {
    display:none;
}
.fullscreen .close-fullscreen {
    display:block!important;
    position: absolute;
    right:0;
    top:0;
}
.close-fullscreen a {
    color:#fff;
    text-decoration: none;
    font-size: 50px;
    margin-right: 10px;
}
.emu-container.fullscreen {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background: rgb(40, 116, 180);
    z-index: 1;
}

.fullscreen #canvas {
    height: 90%;
    display: block;
    border: 0;
    opacity: 1;
}

.output-container {
    flex-grow: 100;
    margin-top: 30px;

}
#output {

    background: #000;
    color: #999;
    margin: 0;
    height: 100%;
    width: 640px;
    overflow: hidden;
    overflow-x: auto;
    overflow-y: auto;


}

#spinner {
    overflow:visible;
}

#spinner strong{
    display: block;
    margin-top: 15px;
}

.spinner {
    height: 50px;
    width: 50px;
    margin: 0px auto;
    -webkit-animation: rotation .8s linear infinite;
    -moz-animation: rotation .8s linear infinite;
    -o-animation: rotation .8s linear infinite;
    animation: rotation 0.8s linear infinite;
    border-left: 10px solid rgb(0, 150, 240);
    border-right: 10px solid rgb(0, 150, 240);
    border-bottom: 10px solid rgb(0, 150, 240);
    border-top: 10px solid rgb(100, 0, 200);
    border-radius: 100%;
    background-color: rgb(200, 100, 250);
}

@-webkit-keyframes rotation {
    from {
        -webkit-transform: rotate(0deg);
    }
    to {
        -webkit-transform: rotate(360deg);
    }
}

@-moz-keyframes rotation {
    from {
        -moz-transform: rotate(0deg);
    }
    to {
        -moz-transform: rotate(360deg);
    }
}

@-o-keyframes rotation {
    from {
        -o-transform: rotate(0deg);
    }
    to {
        -o-transform: rotate(360deg);
    }
}

@keyframes rotation {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

